Update to 3.36.0
Signed-off-by: Richard Nixon <richard.nixon@btinternet>