@@ -1,26 +1,49 @@
-####################################################
+########################################################################################################
 # This file is managed by Habitat
-####################################################
-
--Xms1200M
--Xmx1200M
--XX:MaxDirectMemorySize=2G
+########################################################################################################
+# Make sure prefs are stored in a writable directory initialised by the habitat run hook
+########################################################################################################
+-Djava.util.prefs.userRoot={{cfg.workdir}}/prefs
+########################################################################################################
+# Standard Nexus Settings
+########################################################################################################
+-Xms2703m
+-Xmx2703m
+-XX:MaxDirectMemorySize=2703m
 -XX:+UnlockDiagnosticVMOptions
--XX:+UnsyncloadClass
 -XX:+LogVMOutput
 -XX:LogFile={{cfg.workdir}}/nexus3/log/jvm.log
 -XX:-OmitStackTraceInFastThrow
 -Djava.net.preferIPv4Stack=true
--Dkaraf.home=.
--Dkaraf.base=.
--Dkaraf.etc=etc/karaf
--Djava.util.logging.config.file=etc/karaf/java.util.logging.properties
+-Dkaraf.home={{pkg.path}}
+-Dkaraf.base={{pkg.path}}
+-Dkaraf.etc={{pkg.path}}/etc/karaf
+-Djava.util.logging.config.file={{pkg.path}}/etc/karaf/java.util.logging.properties
 -Dkaraf.data={{cfg.workdir}}/nexus3
+-Dkaraf.log={{cfg.workdir}}/nexus3/log
 -Djava.io.tmpdir={{cfg.workdir}}/nexus3/tmp
 -Dkaraf.startLocalConsole=false
-
-####################################################
-# Make sure prefs are stored in a writable directory
-# (initialised by the habitat run hook)
-####################################################
--Djava.util.prefs.userRoot={{cfg.workdir}}/prefs
+-Djdk.tls.ephemeralDHKeySize=2048
+#
+# additional vmoptions needed for Java9+
+#
+# --add-reads=java.xml=java.logging
+# --add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED
+# --patch-module java.base=${KARAF_HOME}/lib/endorsed/org.apache.karaf.specs.locator-4.3.2.jar
+# --patch-module java.xml=${KARAF_HOME}/lib/endorsed/org.apache.karaf.specs.java.xml-4.3.2.jar
+# --add-opens java.base/java.security=ALL-UNNAMED
+# --add-opens java.base/java.net=ALL-UNNAMED
+# --add-opens java.base/java.lang=ALL-UNNAMED
+# --add-opens java.base/java.util=ALL-UNNAMED
+# --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
+# --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
+# --add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+# --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+# --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+# --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
+# --add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED
+# --add-exports java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+#
+# comment out this vmoption when using Java9+
+#
+-Djava.endorsed.dirs={{pkg.path}}/lib/endorsed
